...
            )
        }
        .padding(.vertical)
        .previewRequiredPaywallsV2Properties()
        .environmentObject(PurchaseHandler.default())
        .previewLayout(.sizeThatFits)
        .previewDisplayName("Examples")
    }

}

@available(iOS 15.0, macOS 12.0, tvOS 15.0, watchOS 8.0, *)
extension CarouselComponentViewModel {
...
